2002-05-26  Stefan Lucke <Stefan.Lucke1@epost.de>
	* apply portability patch of Steven M. Schultz
	* fix off by one in rgb.c array bounds check
	
2002-05-23  Stefan Lucke <Stefan.Lucke1@epost.de>
	* bugfix for #440048, compile playdv with gtk support

2002-05-22  Stefan Lucke <Stefan.Lucke1@epost.de>
	* added clamping for rgb render too. (green speckle bug)

2002-05-22  Dan Dennedy
	* dv.h: add int dv_get_recording_datetime_tm()

2002-05-21  Stefan Lucke <Stefan.Lucke1@epost.de>
	* avoid remaining shared memory segment after playdv crash
	* avoid decoder crash (bug #231580, #558590 etc.). There are some
	  viewable decoding errors now.
	* new clamping for NTSC Xv mmx + half high render.

2002-05-19  Stefan Lucke <Stefan.Lucke1@epost.de>
	* new clamping and addtitional half high renderer of PAL Xv mmx.
	* modified format of audio error reporting
	* additional error reporting of video errors
	  example of messages written to stderr
		ver 00:01:18.21 2001-11-11 14:26:34 9f a7 37 a8
		abf 00:01:40.18 2001-11-11 14:26:56 7f 37 00 12

2002-05-17  Dan Dennedy <dan@dennedy.org>
	* apply patch from Daniel Kobras (bug 544185) to fix compile on
	  non-x86 architecture.
	  
	* add const qualifier to input buffer parameter on
	  dv_decode_full_audio, dv_parse_audio_header, dv_update_num_samples,
	  and dv_decode_audio_block. This makes Kino's Frame::ExtractAudio
	  happy.

2002-05-01  Stefan Lucke <Stefan.Lucke1@epost.de>
	* audio error correction:
	    default error reporting is set to: stderr
	      old_file = dv_set_error_log (decoder, stderr)      
      
	    default correction method is set to: DV_AUDIO_CORRECT_AVERAGE
	      old_method = dv_set_audio_correction (decoder, NEW_METHOD);      
	      NEW_METHOD = DV_AUDIO_CORRECT_NONE |
	                   DV_AUDIO_CORRECT_AVERAGE |
	                   DV_AUDIO_CORRECT_SILENCE
          
	* updated my old invalid email addresses 
  
2002-04-07  Charles 'Buck' Krasic  <krasic@acm.org>
	* Version 0.9.5
