@@ -48,7 +48,7 @@ libdv_la_SOURCES= dv.c dct.c idct_248.c weighting.c quant.c vlc.c place.c \
         encode.c headers.c enc_input.c enc_audio_input.c enc_output.c \
 	$(libdv_la_ASMS)
 
-libdv_la_LDFLAGS = -version-info 1:1:0
+libdv_la_LDFLAGS = -version-info 2:0:0
 
 dovlc_SOURCES= dovlc.c 
 dovlc_LDADD= libdv.la
